# keepalive

./: .gitignore  README.md  pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart  model.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: app.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: app.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_keepalive.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_keepalive.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
